--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,21 @@
-keras==2.15.0
-matplotlib==3.8.2
-numpy==1.26.4
-pandas==2.2.1
-plotly==5.19.0
-prophet==1.1.5
-scikit_learn==1.4.0
+docx==0.2.4
+docx2txt==0.8
+keras==3.5.0
+langchain==0.3.4
+matplotlib==3.8.4
+numpy==2.1.2
+openai==1.52.0
+pandas==2.2.3
+plotly==5.22.0
+prophet==1.1.6
+PyPDF2==3.0.1
+pyperclip==1.9.0
+python_docx==0.8.11
+scikit_learn==1.4.2
 seaborn==0.13.2
-statsmodels==0.14.1
-streamlit==1.31.1
-yfinance==0.2.37
+statsmodels==0.14.2
+streamlit==1.32.0
+tensorflow==2.17.0
+tensorflow_intel==2.17.0
+wordcloud==1.9.3
+yfinance==0.2.44
